# MarbLED-SDK

./: .gitignore  .gitmodules  CMakeLists.txt  ColorPalette.csv  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  demo.sh
app/: ADIR01P_AirConditioner.gen.cpp  ADIR01P_AirConditioner.gen.hpp  ADIR01P_Light.gen.cpp  ADIR01P_Light.gen.hpp  ADIR01P_Television.gen.cpp  ADIR01P_Television.gen.hpp  AppGenerator.cpp  CMakeLists.txt  CockroachShooting.gen.cpp  CockroachShooting.gen.hpp  ImageViewer.gen.cpp  ImageViewer.gen.hpp  MarbleTower.gen.cpp  MarbleTower.gen.hpp  MultiTouchLine.gen.cpp  MultiTouchLine.gen.hpp  MusicVisualizer.gen.cpp  MusicVisualizer.gen.hpp  OscTestApp.gen.cpp  OscTestApp.gen.hpp  Pong.gen.cpp  Pong.gen.hpp  Rain.gen.cpp  Rain.gen.hpp  Scan.gen.cpp  Scan.gen.hpp  SimpleScan.gen.cpp  SimpleScan.gen.hpp  SimpleSwitch.gen.cpp  SimpleSwitch.gen.hpp  Swipe.gen.cpp  Swipe.gen.hpp  TestApp.gen.cpp  TestApp.gen.hpp  Theremin.gen.cpp  Theremin.gen.hpp  Timer.gen.cpp  Timer.gen.hpp  ToggleSwitch.gen.cpp  ToggleSwitch.gen.hpp  (+4 more)
app/AppRunner/: AppRunner.hpp  CMakeLists.txt  Run_ADIR01P_AirConditioner.cpp  Run_ADIR01P_Light.cpp  Run_ADIR01P_Television.cpp  Run_CockroachShooting.cpp  Run_ImageViewer.cpp  Run_MarbleTower.cpp  Run_MultiTouchLine.cpp  Run_MusicVisualizer.cpp  Run_Pong.cpp  Run_Rain.cpp  Run_Scan.cpp  Run_SimpleScan.cpp  Run_SimpleSwitch.cpp  Run_Swipe.cpp  Run_Theremin.cpp  Run_Timer.cpp  Run_ToggleSwitch.cpp  Run_VoiceRecognition.cpp
doc/html/: PanelBase_8cpp.html  PanelBase_8cpp__incl.map  PanelBase_8hpp.html  PanelBase_8hpp__dep__incl.map  PanelBase_8hpp__dep__incl.md5  PanelBase_8hpp__incl.map  PanelBase_8hpp__incl.md5  PanelBase_8hpp_source.html  Panel__8x8_8hpp__incl.md5  Panel__8x8_8hpp_source.html  PixelInfo_8cpp__incl.md5  PixelInfo_8hpp.html  PixelInfo_8hpp__dep__incl.map  PixelInfo_8hpp__dep__incl.md5  annotated.html  classPanelBase-members.html  classPanelBase.html  classPanelBase__coll__graph.md5  classPanelBase__inherit__graph.md5  classPanel__8x8-members.html  classPanel__8x8.html  classPanel__8x8__coll__graph.md5  classPanel__8x8__inherit__graph.map  classPanel__8x8__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9fed3551442b4278906b0b436b2332e6.html  files.html  functions.html  functions_func.html  globals.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  structPixelInfo-members.html  structPixelInfo.html
doc/latex/: PanelBase_8cpp.tex  PanelBase_8cpp__incl.md5  PanelBase_8hpp.tex  PanelBase_8hpp__dep__incl.md5  PanelBase_8hpp__incl.md5  PixelInfo_8cpp.tex  PixelInfo_8hpp.tex  PixelInfo_8hpp__dep__incl.md5  annotated.tex  classPanelBase.tex  classPanelBase__coll__graph.md5  classPanelBase__inherit__graph.md5  dir_9fed3551442b4278906b0b436b2332e6.tex  files.tex  hierarchy.tex  refman.tex
docs/: Adafruit__ADS1X15_8cpp.html  Adafruit__ADS1X15_8cpp__incl.dot  Adafruit__ADS1X15_8h.html  Adafruit__ADS1X15_8h__dep__incl.dot  Adafruit__ADS1X15_8h__incl.dot  Adafruit__ADS1X15_8h_source.html  Color_8cpp.html  Color_8cpp__incl.dot  Color_8cpp__incl.map  Color_8cpp__incl.md5  Color_8hpp.html  Color_8hpp__dep__incl.dot  Color_8hpp__dep__incl.map  Color_8hpp__dep__incl.md5  Color_8hpp__incl.dot  Color_8hpp__incl.map  Color_8hpp__incl.md5  Color_8hpp_source.html  Event_8cpp.html  Event_8cpp__incl.dot  Event_8cpp__incl.map  Event_8cpp__incl.md5  Event_8hpp.html  Event_8hpp__dep__incl.dot  Event_8hpp__dep__incl.map  Event_8hpp__dep__incl.md5  Event_8hpp__incl.dot  Event_8hpp__incl.map  Event_8hpp__incl.md5  Event_8hpp_source.html  FillSingleColor__8x16_8cpp.html  FillSingleColor__8x16_8cpp__incl.dot  FillSingleColor__8x16_8cpp__incl.map  FillSingleColor__8x16_8cpp__incl.md5  FlashSender_8h_source.html  HT16K33__16x32L_8cpp.html  HT16K33__16x32L_8cpp__incl.map  HT16K33__16x32L_8cpp__incl.md5  HT16K33__16x32L_8hpp_source.html  HT16K33__24x16_8cpp.html  (+2778 more)
docs/html/: Panel__8x8_8hpp.html  PixelInfo_8hpp.html  classPanelBase__coll__graph.map  classPanelBase__inherit__graph.md5  classes.html  files.html  functions.html  functions_vars.html  globals_enum.html  inherit_graph_1.map  inherits.html
docs/latex/: PanelBase_8cpp.tex  PanelBase_8hpp.tex  PanelBase_8hpp__dep__incl.md5  Panel__8x8_8hpp.tex  Panel__8x8_8hpp__incl.md5  PixelInfo_8cpp.tex  PixelInfo_8cpp__incl.md5  PixelInfo_8hpp.tex  PixelInfo_8hpp__incl.md5  classPanelBase__coll__graph.md5  classPanel__8x8.tex  classPanel__8x8__coll__graph.md5  classPanel__8x8__inherit__graph.md5  dir_9fed3551442b4278906b0b436b2332e6.tex  files.tex  hierarchy.tex  structPixelInfo.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  (+100 more)
example/: FillSingleColor_8x16.cpp  Image_192x192.cpp  Image_24x16.cpp  Image_8x16.cpp  Intaractive_24x16.cpp  Intaractive_32x32.cpp  Intaractive_8x16.cpp  LineCircle_24x16.cpp  MovingRect_24x16.cpp  MovingRect_8x16  MovingRect_8x16.cpp  PrintText_24x16.cpp  PrintTime_24x16.cpp  PrintTime_24x16.cpp_24x16  Rectangles_8x16.cpp  Video_24x16.cpp  bomb.cpp  example01.cpp  example_osc.cpp  int2022_demo.cpp  int2022_demo_1.cpp  int2022_demo_2.cpp  int2022_demo_3.cpp  int2022_demo_4.cpp  int2022_demo_5.cpp  int2022_demo_6.cpp  int2022_demo_7.cpp  music_visualizer.cpp  screen_saver.cpp
include/: AppInterface.hpp  BaseApp.hpp  Color.hpp  Event.hpp  Image.hpp  OscHandler.hpp  PanelManager.hpp  SerialManager.hpp  Simulator.hpp  TLL.h  TextRenderer.hpp  TouchInfo.hpp  Video.hpp  tllComponent.hpp  tllEngine.hpp
src/: BaseApp.cpp  Color.cpp  Common.hpp  Event.cpp  Image.cpp  OscHandler.cpp  PanelManager.cpp  SerialManager.cpp  Simulator.cpp  StopWatch.hpp  TLLmain.cpp  TextRenderer.cpp  Video.cpp  tllEngine.cpp
test/: a.out  test_ADC-MUX.cpp  test_IR.cpp  test_MUX.cpp  test_serial.cpp  test_serial_list.cpp
uml/: uml.pu
(+57 files in other folders)
